kubernetes/base/namespace/network-policies/allow-thermoworks-api-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-thermoworks-api-access
  namespace: grill-stats
  labels:
    app.kubernetes.io/name: grill-stats
    app.kubernetes.io/part-of: grill-stats
    app.kubernetes.io/managed-by: kustomize
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: device-service
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        # This allows external access to the ThermoWorks API
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 443
