kubernetes/base/namespace/network-policies/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: grill-stats
  labels:
    app.kubernetes.io/name: grill-stats
    app.kubernetes.io/part-of: grill-stats
    app.kubernetes.io/managed-by: kustomize
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
